[project]
name = "pygase"
version = "0.3.1"
description = "game-ready client-server architecture and UDP-based network protocol - built to be easy to use, lightweight, fast, scalable and reliable"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Silas Bischoff", email = "silas.bischoff@googlemail.com" }]
keywords = ["client", "server", "real-time", "network", "games"]
classifiers = [
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Topic :: Games/Entertainment",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "ifaddr>=0.2.0",
    "u-msgpack-python>=2.8.0",
]

[project.urls]
Repository = "https://github.com/sbischoff-ai/pygase"
Homepage = "https://sbischoff-ai.github.io/pygase/"

[dependency-groups]
dev = [
    "black>=24.0.0",
    "freezegun>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
    "pydoc-markdown>=4.8.0",
    "pydocstyle>=6.3.0",
    "pygame>=2.6.0",
    "pygments>=2.18.0",
    "pylint>=3.2.0",
    "pylint-fail-under>=0.3.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.black]
line-length = 119
target-version = ["py312"]

[tool.uv]
default-groups = ["dev"]

[tool.pylint.main]
py-version = "3.12"

[tool.pylint."messages control"]
disable = [
    "duplicate-code",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "too-few-public-methods",
]

[tool.pydocstyle]
convention = "google"
add-ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D401",
]
